# backup-cleaner

./: .env.sample  .gitignore  BackupRemover  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: checker.rs  file_data.rs  file_generator.rs  main.rs  store.rs  tests.rs
