[package]
name = "BackupRemover"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.38"
clap = { version = "4.5.29", features = ["derive"] }
parse_duration = "2.1.1"
rand = "0.8.5"
regex = "1.10.5"
